@@ -163,7 +163,9 @@ fi
 AC_TYPE_SSIZE_T
 AC_TYPE_PID_T
 TYPE_SOCKLEN_T
+AC_TYPE_INT8_T
 AC_TYPE_UINT8_T
+AC_TYPE_INT16_T
 AC_TYPE_UINT16_T
 AC_TYPE_INT32_T
 AC_TYPE_UINT32_T
